metadata-classic/objects/becquerel_enrollments_for_tack__x.object
<CustomObject>
    <description>becquerel__enrollments_for_tack</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__enrollments_for_tack</externalName>
    <fields>
        <fullName>business_name__c</fullName>
        <description>business_name</description>
        <externalDeveloperName>business_name</externalDeveloperName>
        <label>business_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category_contacts_30days_pa__c</fullName>
        <description>category_contacts_30days_pa</description>
        <externalDeveloperName>category_contacts_30days_pa</externalDeveloperName>
        <label>category_contacts_30days_pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>email</description>
        <externalDeveloperName>email</externalDeveloperName>
        <label>email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enrollment_id__c</fullName>
        <description>enrollment_id</description>
        <externalDeveloperName>enrollment_id</externalDeveloperName>
        <label>enrollment_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <description>first_name</description>
        <externalDeveloperName>first_name</externalDeveloperName>
        <label>first_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>in_qs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>in_qs</description>
        <externalDeveloperName>in_qs</externalDeveloperName>
        <label>in_qs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <description>last_name</description>
        <externalDeveloperName>last_name</externalDeveloperName>
        <label>last_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>live__c</fullName>
        <defaultValue>false</defaultValue>
        <description>live</description>
        <externalDeveloperName>live</externalDeveloperName>
        <label>live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>outreach_group__c</fullName>
        <description>outreach_group</description>
        <externalDeveloperName>outreach_group</externalDeveloperName>
        <label>outreach_group</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>outreach_type__c</fullName>
        <description>outreach_type</description>
        <externalDeveloperName>outreach_type</externalDeveloperName>
        <label>outreach_type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pct_category_contacts_from_pro_30days_pa__c</fullName>
        <description>pct_category_contacts_from_pro_30days_pa</description>
        <externalDeveloperName>pct_category_contacts_from_pro_30days_pa</externalDeveloperName>
        <label>pct_category_contacts_from_pro_30days_pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pct_pro_contacts_in_category_30days_pa__c</fullName>
        <description>pct_pro_contacts_in_category_30days_pa</description>
        <externalDeveloperName>pct_pro_contacts_in_category_30days_pa</externalDeveloperName>
        <label>pct_pro_contacts_in_category_30days_pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <description>phone</description>
        <externalDeveloperName>phone</externalDeveloperName>
        <label>phone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>priority_from_analytics__c</fullName>
        <description>priority_from_analytics</description>
        <externalDeveloperName>priority_from_analytics</externalDeveloperName>
        <label>priority_from_analytics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pro_contacts_30days_pa__c</fullName>
        <description>pro_contacts_30days_pa</description>
        <externalDeveloperName>pro_contacts_30days_pa</externalDeveloperName>
        <label>pro_contacts_30days_pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pro_quotes_180days_pa__c</fullName>
        <description>pro_quotes_180days_pa</description>
        <externalDeveloperName>pro_quotes_180days_pa</externalDeveloperName>
        <label>pro_quotes_180days_pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pro_quotes_30days_pa__c</fullName>
        <description>pro_quotes_30days_pa</description>
        <externalDeveloperName>pro_quotes_30days_pa</externalDeveloperName>
        <label>pro_quotes_30days_pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pro_quotes_90days_pa__c</fullName>
        <description>pro_quotes_90days_pa</description>
        <externalDeveloperName>pro_quotes_90days_pa</externalDeveloperName>
        <label>pro_quotes_90days_pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rca_name__c</fullName>
        <description>rca_name</description>
        <externalDeveloperName>rca_name</externalDeveloperName>
        <label>rca_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_request_category_id__c</fullName>
        <description>rca_request_category_id</description>
        <externalDeveloperName>rca_request_category_id</externalDeveloperName>
        <label>rca_request_category_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>risk_level__c</fullName>
        <description>risk_level</description>
        <externalDeveloperName>risk_level</externalDeveloperName>
        <label>risk_level</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timezone_from_admin__c</fullName>
        <description>timezone_from_admin</description>
        <externalDeveloperName>timezone_from_admin</externalDeveloperName>
        <label>timezone_from_admin</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>top_pro__c</fullName>
        <description>top_pro</description>
        <externalDeveloperName>top_pro</externalDeveloperName>
        <label>top_pro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unsuccessful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>unsuccessful</description>
        <externalDeveloperName>unsuccessful</externalDeveloperName>
        <label>unsuccessful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <description>user_id</description>
        <externalDeveloperName>user_id</externalDeveloperName>
        <label>user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zip_cbsa_code__c</fullName>
        <description>zip_cbsa_code</description>
        <externalDeveloperName>zip_cbsa_code</externalDeveloperName>
        <label>zip_cbsa_code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip_cbsa_name__c</fullName>
        <description>zip_cbsa_name</description>
        <externalDeveloperName>zip_cbsa_name</externalDeveloperName>
        <label>zip_cbsa_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>becquerel__enrollments_for_tack</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>business_name__c</columns>
        <columns>email__c</columns>
        <columns>enrollment_id__c</columns>
        <columns>first_name__c</columns>
        <columns>last_name__c</columns>
        <columns>in_qs__c</columns>
        <columns>outreach_group__c</columns>
        <columns>outreach_type__c</columns>
        <columns>phone__c</columns>
        <columns>priority_from_analytics__c</columns>
        <columns>rca_name__c</columns>
        <columns>user_id__c</columns>
        <columns>zip_cbsa_code__c</columns>
        <columns>zip_cbsa_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>becquerel__enrollments_for_tack</pluralLabel>
</CustomObject>